2008-05-22  Tim-Philipp Müller  <tim.muller at collabora co uk>

	* sys/oss4/oss4-mixer.c: (gst_oss4_mixer_open):
	* sys/oss4/oss4-property-probe.c:
	  (gst_oss4_property_probe_find_device_name),
	  (gst_oss4_property_probe_find_device_name_nofd):
	* sys/oss4/oss4-property-probe.h:
	* sys/oss4/oss4-sink.c: (gst_oss4_sink_get_property):
	* sys/oss4/oss4-source.c: (gst_oss4_source_get_property):
	  Make device-name probing in NULL state work better (e.g. for the
	  gnome-control-center sound capplet).

2008-05-22  Wim Taymans  <wim.taymans@collabora.co.uk>

	Patch by: Sjoerd Simons <sjoerd at luon dot net>

	* gst/mpeg4videoparse/mpeg4videoparse.c: (gst_mpeg4vparse_push),
	(gst_mpeg4vparse_drain), (gst_mpeg4vparse_chain),
	(gst_mpeg4vparse_change_state):
	Move some code around to integrate the startcode searching with the
	other bits of parsing, avoid a whole bunch of peeks.
	Get rid of invalid data that should not happen according to the specs.
	Fixes #533559.

2008-05-20  Sebastian Dröge  <slomo@circular-chaos.org>

	Patch by: Bastien Nocera <hadess at hadess dot net>

	* ext/mythtv/gstmythtvsrc.c: (gst_mythtv_src_class_init),
	(gst_mythtv_src_init), (gst_mythtv_src_clear),
	(do_read_request_response), (gst_mythtv_src_create),
	(gst_mythtv_src_start):
	Correctly set duration to get a more correct seek bar in totem.

	Disable query and event functions as they don't work and do some
	smaller cleanup.

	Fixes bug #533736.

2008-05-20  Sebastian Dröge  <slomo@circular-chaos.org>

	Patch by: Brian Koropoff <brianhk at cs dot washington dot edu>

	* ext/spc/Makefile.am:
	* ext/spc/gstspc.c: (gst_spc_dec_class_init),
	(gst_spc_dec_src_query_type), (gst_spc_dec_init),
	(gst_spc_dec_dispose), (gst_spc_dec_sink_event),
	(gst_spc_duration), (gst_spc_fadeout), (gst_spc_dec_src_event),
	(gst_spc_dec_src_query), (spc_play), (spc_setup):
	* ext/spc/gstspc.h:
	* ext/spc/tag.c: (spc_tag_is_extended), (spc_tag_is_text_format),